--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="/PlannersTime/index.html">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/booking.html">Booking</a>
+              <a class="nav-link" href="/PlannersTime/booking.html">Booking</a>
             </li>
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -41,7 +41,7 @@
               </ul>
             </li>
             <li class="nav-item active">
-              <a class="nav-link " href="/contact.html">Contact Us</a>
+              <a class="nav-link " href="/PlannersTime/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
