--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/PlannersTime/index.html">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/PlannersTime/booking.html">Booking</a>
             </li>
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">Wed Days</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
