--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <li class="nav-item active">
               <a class="nav-link active" aria-current="page" href="/PlannersTime/index.html">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/PlannersTime/booking.html">Booking</a>
             </li>
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">Wed Days</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -40,7 +40,7 @@
                 <li><a class="dropdown-item" href="#">Walima</a></li>
               </ul>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link " href="/PlannersTime/contact.html">Contact Us</a>
             </li>
           </ul>
