--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
               </ul>
             </li>
             <li class="nav-item active">
-              <a class="nav-link " href="/PlannersTime/contact.html">Contact Us</a>
+              <a class="nav-link active" href="/PlannersTime/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
