--- a/booking.html
+++ b/booking.html
@@ -29,7 +29,7 @@
               <a class="nav-link" aria-current="page" href="/PlannersTime/index.html">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/PlannersTime/booking.html">Booking</a>
+              <a class="nav-link active" href="/PlannersTime/booking.html">Booking</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
